@@ -221,7 +221,7 @@ else
   realpath=''
 
   if [[ "$pre[1]" = / ]]; then
-    # If it is a absolut path name, we remove the first slash and put it in
+    # If it is a absolute path name, we remove the first slash and put it in
     # `donepath' meaning that we treat it as the path that was already handled.
     # Also, we don't use the paths from `-W'.
 
